<resources>
    <string name="app_name">iSpi</string>
    <string name="action_settings">Settings</string>
    <string name="_mID">ID# </string>
    <string name="_mStats">Solved: </string>
    <string name="_mCheck">Check Location</string>
    <string name="_mHint">Get Hint</string>
    <string name="_mNew">New Picture</string>
    <string name="latLabel">Lat: </string>
    <string name="longLabel">Long: </string>
    <string name="title_activity_settings">Settings</string>

    <string name="reset_label">Reset Score</string>

    <string name="distance_label">Picture load distance:</string>
    <string name="half_k_label">0.5 km</string>
    <string name="k_label"> 1 km</string>
    <string name="two_k_label">2 km</string>

</resources>
