<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sean.ispi.SettingsActivity"
    android:orientation="vertical">


    <Button
        android:text="@string/reset_label"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/reset_button" />

    <TextView
        android:text="@string/distance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/half_k_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/half_k_button"
            android:layout_weight="1" />

        <Button
            android:text="@string/k_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/k_button"
            android:layout_weight="1" />

        <Button
            android:text="@string/two_k_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/two_k_button"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
